--- a/client/src/components/layout/layout.css
+++ b/client/src/components/layout/layout.css
@@ -39,7 +39,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  min-width: 0;
 }
 
 /* Top Bar */
@@ -58,14 +57,12 @@
   flex: 1;
   display: flex;
   overflow: hidden;
-  min-width: 0;
 }
 
 .center-content {
   flex: 1;
   overflow-y: auto;
   padding: 30px;
-  min-width: 0;
 }
 
 /* Sidebar Right */
